# biologyn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
environments/: basic.json
resources/: schema.json
src/: Chaos.cpp  Chaos.h  Environment.cpp  Environment.h  Fauna.cpp  Fauna.h  FileParser.cpp  FileParser.h  Flora.cpp  Flora.h  Living.cpp  Living.h
